# Spotify-Lifecycle-Manager

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
dashboard/site/: README.md  app.js  dashboard_data.json  dev_proxy.py  index.html  styles.css
dashboard/site/backup/: app.js  index.html  styles.css
docs/images/: README.md
infra/terraform/: .gitignore  README.md  alarms.tf  budget.tf  build_lambda_package.sh  cloudfront.tf  deploy.sh  dynamodb.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  outputs.tf  outputs_cloudfront.tf  s3.tf  s3_cloudfront_policy.tf  secrets.tf  terraform.tfvars.example  variables.tf  variables_cloudfront.tf
scripts/: CUSTOM_TOOLS.md  backfill_missing_summaries.py  build_dashboard.py  check_dashboard_health.py  clean_corrupted_cache.sh  deploy.sh  explain_terraform_plan.py  recover_daily_summaries.py  run_ingest.py  stream_logs.py  track_costs.py  validate_tf_tags.sh
scripts/hooks/: install-hooks.sh  pre-commit
src/spotify_lifecycle/: __init__.py  config.py  lambda_handler.py  models.py
src/spotify_lifecycle/pipeline/: __init__.py  aggregate.py  backfill.py  enrich.py  ingest.py  playlists.py
src/spotify_lifecycle/spotify/: __init__.py  client.py  oauth.py
src/spotify_lifecycle/storage/: __init__.py  dynamo.py  s3.py
src/spotify_lifecycle/utils/: hashing.py  time.py
tests/: test_aggregate.py  test_backfill.py  test_imports.py  test_models.py  test_pipeline.py  test_storage.py  test_utils.py
tests/mocks/: __init__.py  storage.py
